# VolumeReader

./: .gitignore  CMakeLists.txt  README.MD
include/VolumeReader/: volume_reader.h
src/: CMakeLists.txt  volume_reader.cpp
test/: CMakeLists.txt  raw_gen.cpp  test_reader.cpp
